instruct model and training data collection

--- a/src/instruct/summarize_flan_t5.ipynb
+++ b/src/instruct/summarize_flan_t5.ipynb
@@ -96,38 +96,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # load peft model\n",
-    "# from peft import PeftModel, PeftConfig\n",
-    "\n",
-    "# peft_model_base = AutoModelForSeq2SeqLM.from_pretrained(\"google/flan-t5-base\", torch_dtype=torch.bfloat16)\n",
-    "# tokenizer = AutoTokenizer.from_pretrained(\"google/flan-t5-base\")\n",
-    "\n",
-    "# peft_model = PeftModel.from_pretrained(peft_model_base, \n",
-    "#                                        './checkpoint/', \n",
-    "#                                        torch_dtype=torch.bfloat16,\n",
-    "#                                        is_trainable=True).to(\"cuda\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # load original model\n",
-    "# model_name='google/flan-t5-base'\n",
-    "# # model_name = \"./checkpoint/\"\n",
-    "\n",
-    "# model = AutoModelForSeq2SeqLM.from_pretrained(model_name, torch_dtype=torch.bfloat16)\n",
-    "# tokenizer = AutoTokenizer.from_pretrained(model_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -748,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# load pretrained flan t5 "
+    "# load original flan t5 "
    ]
   },
   {
