--- a/src/googlenews.ipynb
+++ b/src/googlenews.ipynb
@@ -13,22 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3aff55a6-d650-4629-8a07-f24cfca0e67a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tqdm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtqdm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mGoogleNews\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GoogleNews\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tqdm'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "from GoogleNews import GoogleNews"
@@ -36,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ed3e2b8f-3c35-49ec-8542-dd96e044c1e4",
    "metadata": {},
    "outputs": [],
@@ -50,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7bef7da0-4365-4450-a0df-cb2bae0f750f",
    "metadata": {},
    "outputs": [],
@@ -69,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8d279f7d-ec98-46e6-ba91-27277280f94e",
    "metadata": {},
    "outputs": [],
@@ -113,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d33e5027-8f51-4a69-906c-c2d1f7f83da2",
    "metadata": {},
    "outputs": [
@@ -121,20 +109,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HTTP Error 429: Too Many Requests\n",
-      "HTTP Error 429: Too Many Requests\n",
-      "HTTP Error 429: Too Many Requests\n",
-      "HTTP Error 429: Too Many Requests\n",
-      "HTTP Error 429: Too Many Requests\n",
-      "HTTP Error 429: Too Many Requests\n",
-      "HTTP Error 429: Too Many Requests\n"
+      "100%|██████████| 1/1 [00:16<00:00, 16.20s/it]\n",
+      "100%|██████████| 1/1 [00:02<00:00,  2.52s/it]\n"
      ]
     }
    ],
@@ -146,17 +122,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "88a2b9f4-32b5-4b1b-9a28-e78781976830",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2250"
+       "188"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,22 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "46779e9a-c035-46c0-b876-cfff1a839e5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'title': '2023 NFL power rankings: Chiefs, Eagles lead our initial list',\n",
-       " 'media': 'FOX Sports',\n",
+       "{'title': 'News: Today’s News Headlines, Breaking News India, World News and Cricket News',\n",
+       " 'media': 'Hindustan Times',\n",
        " 'date': '0 hours ago',\n",
-       " 'datetime': datetime.datetime(2023, 9, 6, 9, 39, 36, 481550),\n",
-       " 'link': 'https://www.foxsports.com/stories/nfl/2023-nfl-power-rankings-chiefs-eagles-lead-our-initial-list',\n",
-       " 'category': 'Sports'}"
+       " 'datetime': datetime.datetime(2023, 9, 7, 22, 47, 0, 480906),\n",
+       " 'link': 'https://www.hindustantimes.com/infographic/understanding-the-fosbury-flop-101682536635133.html',\n",
+       " 'category': 'Top Stories'}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,114 +169,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "fc0b0010-3149-4b3f-91b1-8f41d65c98eb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 11/31 [01:28<02:45,  8.26s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# get newspapers directly\n",
-    "import time\n",
-    "import newspaper\n",
-    "from tqdm import tqdm\n",
+    "# # get newspapers directly\n",
+    "# import time\n",
+    "# import newspaper\n",
+    "# from tqdm import tqdm\n",
     "\n",
     "\n",
-    "news_sites = [\n",
-    "    \"http://cnn.com\",\n",
-    "    \"http://bbc.com\",\n",
-    "    \"http://nytimes.com\",\n",
-    "    \"http://washingtonpost.com\",\n",
-    "    \"http://reuters.com\",\n",
-    "    \"http://apnews.com\",\n",
-    "    \"http://nbcnews.com\",\n",
-    "    \"http://usatoday.com\",\n",
-    "    \"http://theguardian.com\",\n",
-    "    \"http://aljazeera.com\",\n",
-    "    \"http://bloomberg.com\",\n",
-    "    \"http://huffpost.com\",\n",
-    "    \"http://abcnews.go.com\",\n",
-    "    \"http://time.com\",\n",
-    "    \"http://forbes.com\",\n",
-    "    \"http://cnbc.com\",\n",
-    "    \"http://wsj.com\",\n",
-    "    \"http://npr.org\",\n",
-    "    \"http://bostonglobe.com\",\n",
-    "    \"http://latimes.com\",\n",
-    "    \"http://chicagotribune.com\",\n",
-    "    \"http://foxnews.com\",\n",
-    "    \"http://usatoday.com\",\n",
-    "    \"http://news.yahoo.com\",\n",
-    "    \"http://cbc.ca\",\n",
-    "    \"http://independent.co.uk\",\n",
-    "    \"http://usatoday.com\",\n",
-    "    \"http://thetimes.co.uk\",\n",
-    "    \"http://mirror.co.uk\",\n",
-    "    \"http://news.sky.com\",\n",
-    "    \"http://dailynews.com\",\n",
-    "]\n",
+    "# news_sites = [\n",
+    "#     \"http://cnn.com\",\n",
+    "#     \"http://bbc.com\",\n",
+    "#     \"http://nytimes.com\",\n",
+    "#     \"http://washingtonpost.com\",\n",
+    "#     \"http://reuters.com\",\n",
+    "#     \"http://apnews.com\",\n",
+    "#     \"http://nbcnews.com\",\n",
+    "#     \"http://usatoday.com\",\n",
+    "#     \"http://theguardian.com\",\n",
+    "#     \"http://aljazeera.com\",\n",
+    "#     \"http://bloomberg.com\",\n",
+    "#     \"http://huffpost.com\",\n",
+    "#     \"http://abcnews.go.com\",\n",
+    "#     \"http://time.com\",\n",
+    "#     \"http://forbes.com\",\n",
+    "#     \"http://cnbc.com\",\n",
+    "#     \"http://wsj.com\",\n",
+    "#     \"http://npr.org\",\n",
+    "#     \"http://bostonglobe.com\",\n",
+    "#     \"http://latimes.com\",\n",
+    "#     \"http://chicagotribune.com\",\n",
+    "#     \"http://foxnews.com\",\n",
+    "#     \"http://usatoday.com\",\n",
+    "#     \"http://news.yahoo.com\",\n",
+    "#     \"http://cbc.ca\",\n",
+    "#     \"http://independent.co.uk\",\n",
+    "#     \"http://usatoday.com\",\n",
+    "#     \"http://thetimes.co.uk\",\n",
+    "#     \"http://mirror.co.uk\",\n",
+    "#     \"http://news.sky.com\",\n",
+    "#     \"http://dailynews.com\",\n",
+    "# ]\n",
     "\n",
-    "results = []\n",
+    "# results = []\n",
     "\n",
-    "for news_site in tqdm(news_sites):\n",
-    "    paper = newspaper.build(news_site)\n",
+    "# for news_site in tqdm(news_sites):\n",
+    "#     paper = newspaper.build(news_site)\n",
     "\n",
-    "    for article in paper.articles:\n",
-    "        results.append({\"link\": article.url,\n",
-    "                     \"media\": news_site})\n",
+    "#     for article in paper.articles:\n",
+    "#         results.append({\"link\": article.url,\n",
+    "#                      \"media\": news_site})\n",
     "        \n",
-    "    time.sleep(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "2f492dcb-7ab9-4412-9e6c-9602e2b890eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(feed_news)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "370a5af0-679c-4d41-9e19-2edde0f9e2e1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Here are the 20 specific Fox broadcasts and tweets Dominion says were defamatory',\n",
-       " 'summary': \"• Fox-Dominion trial delay 'is not unusual,' judge says\\n• Fox News' defamation battle isn't stopping Trump's election lies\",\n",
-       " 'link': 'https://www.cnn.com/2023/04/17/media/dominion-fox-news-allegations/index.html',\n",
-       " 'source': 'rss feed'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "feed_news[0]"
+    "#     time.sleep(5)"
    ]
   },
   {
