data, model, utils, infer modules

--- a/src/infer_summarize_flan_t5.ipynb
+++ b/src/infer_summarize_flan_t5.ipynb
@@ -391,9 +391,9 @@
     "\n",
     "\n",
     "    for i in range(len(peft_model_outputs)):\n",
-    "        news[i][mode] = clean_generated_text(tokenizer.decode(peft_model_outputs[i], skip_special_tokens=True))\n",
+    "        data[i][mode] = clean_generated_text(tokenizer.decode(peft_model_outputs[i], skip_special_tokens=True))\n",
     "        \n",
-    "    return news"
+    "    return data"
    ]
   },
   {
