--- a/saar/infer/example/t5_infer.ipynb
+++ b/saar/infer/example/t5_infer.ipynb
@@ -22,19 +22,11 @@
     }
    ],
    "source": [
-    "from datasets import load_dataset\n",
     "from transformers import (AutoModelForSeq2SeqLM, \n",
     "                          AutoTokenizer, \n",
-    "                          GenerationConfig, \n",
-    "                          TrainingArguments, \n",
-    "                          Trainer)\n",
+    "                          GenerationConfig)\n",
     "import torch\n",
-    "import time\n",
-    "import os\n",
-    "import evaluate\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from math import ceil"
+    "import os"
    ]
   },
   {
@@ -459,13 +451,6 @@
    "source": [
     "news"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
