training data preparation for reward model

--- a/saar/train/t5_instruct.ipynb
+++ b/saar/train/t5_instruct.ipynb
@@ -185,7 +185,7 @@
     "\n",
     "# Iterate through each file in the folder\n",
     "for filename in os.listdir(folder_path):\n",
-    "    if filename.endswith('.json') and \"shorts\" in filename:\n",
+    "    if filename.endswith('.json'):\n",
     "        print(filename)\n",
     "        file_path = os.path.join(folder_path, filename)\n",
     "        \n",
