reward model changes

--- a/saar/data/training/data.ipynb
+++ b/saar/data/training/data.ipynb
@@ -13,16 +13,7 @@
    "execution_count": 1,
    "id": "c6383c9f-0d1c-4077-bb99-034d31677458",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.11) or chardet (3.0.4) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tqdm import tqdm\n",
     "import requests\n",
@@ -82,13 +73,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 unique dates\n"
+      "1 unique dates\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'09-10-23'"
+       "'10-08-23'"
       ]
      },
      "execution_count": 3,
@@ -141,14 +132,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5it [00:25,  5.09s/it]"
+      "5it [00:37,  7.41s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2985 news\n"
+      "3000 news\n"
      ]
     },
     {
@@ -431,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "fec4430b-bf03-479f-877c-1ae02002ccd7",
    "metadata": {},
    "outputs": [
@@ -439,7 +430,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16183 news\n"
+      "3000 news\n"
      ]
     }
    ],
@@ -461,21 +452,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d1b99e7d-449e-419f-8e9d-ed3cf0340e05",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'title': \"How is India-Middle East-Europe Corridor different from China's Belt & Road Initiative?\",\n",
-       " 'summary': 'The India-Middle East-Europe Economic Corridor will be substantially different from China\\'s Belt and Road Initiative, Railways Minister Ashwini Vaishnaw said. Unlike the BRI, where a huge debt burden gets imposed on host nations, the G20 project will bring in revenue and be bankable, Vaishnaw added. \"The BRI came with...conditions...[Now] countries can decide on basis of its needs,\" he added.',\n",
-       " 'link': 'https://www.news18.com/amp/videos/india/railway-minister-on-how-india-middle-east-eu-corridor-differs-from-china-s-bri-g20-summit-news18-8572165.html?utm_campaign=fullarticle&utm_medium=referral&utm_source=inshorts',\n",
-       " 'image_link': 'https://static.inshorts.com/inshorts/images/v1/variants/jpg/m/2023/09_sep/10_sun/img_1694367018282_376.jpg?',\n",
+       "{'title': 'Israel officially declares war for the 1st time in 50 years amid Hamas attack',\n",
+       " 'summary': 'The Israeli government on Sunday said its Security Cabinet has invoked Article 40 of Basic Law, officially declaring war, reportedly for the first time since the Yom Kippur war in 1973. It said the Cabinet has approved \"the taking of significant military steps\". Around 500 people have reportedly been killed since Saturday in Hamas\\' attack and Israel\\'s counterattack.',\n",
+       " 'link': 'https://twitter.com/IsraeliPM/status/1710988420405678540?utm_campaign=fullarticle&utm_medium=referral&utm_source=inshorts',\n",
+       " 'image_link': 'https://static.inshorts.com/inshorts/images/v1/variants/jpg/m/2023/10_oct/8_sun/img_1696768248194_214.jpg?',\n",
        " 'source': 'inshorts'}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "851a3ec5-ea31-4196-91ff-6cbdd38d4af5",
    "metadata": {},
    "outputs": [
@@ -502,8 +493,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11024  unique links\n",
-      "16183  total links\n"
+      "2945  unique links\n",
+      "3000  total links\n"
      ]
     }
    ],
@@ -514,23 +505,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "82e7e36d-6edc-46bd-99cd-5113c2c649e6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package punkt to /home/qblocks/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11135 news\n"
+      "3000 news\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/dawn/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
@@ -652,12 +643,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "6558d656-8f37-4257-b536-20d5c67e5a52",
    "metadata": {},
    "outputs": [],
    "source": [
-    "news = clubbed_overall_news # + feed_news"
+    "news = clubbed_overall_news[:2].copy() # + feed_news"
    ]
   },
   {
@@ -693,16 +684,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "078b335d-9d1c-4135-8a60-7cc5101e3655",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████| 2/2 [00:02<00:00,  1.05s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "get full news\n",
     "\"\"\"\n",
     "news = [get_full_news(new) for new in tqdm(news)]\n",
     "news = [new for new in news if new is not None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "77e5e6f0-1736-4284-8ae8-28fc1456d83f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(news)"
    ]
   },
   {
@@ -724,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "dc4516b1-a640-47bd-9f1a-57545f2a3cee",
    "metadata": {},
    "outputs": [
@@ -732,38 +752,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/requests/__init__.py:89: RequestsDependencyWarning: urllib3 (1.26.11) or chardet (3.0.4) doesn't match a supported version!\n",
-      "  warnings.warn(\"urllib3 ({}) or chardet ({}) doesn't match a supported \"\n",
-      "2023-09-11 07:43:44.390496: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-09-11 07:43:45.931315: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-09-11 07:43:45.931434: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-09-11 07:43:45.931449: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "===================================BUG REPORT===================================\n",
-      "Welcome to bitsandbytes. For bug reports, please submit your error trace to: https://github.com/TimDettmers/bitsandbytes/issues\n",
-      "================================================================================\n",
-      "CUDA_SETUP: WARNING! libcudart.so not found in any environmental path. Searching /usr/local/cuda/lib64...\n",
-      "CUDA SETUP: CUDA runtime path found: /usr/local/cuda/lib64/libcudart.so\n",
-      "CUDA SETUP: Highest compute capability among GPUs detected: 8.6\n",
-      "CUDA SETUP: Detected CUDA version 113\n",
-      "CUDA SETUP: Loading binary /home/qblocks/.local/lib/python3.8/site-packages/bitsandbytes/libbitsandbytes_cuda113.so...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/qblocks/.local/lib/python3.8/site-packages/bitsandbytes/cuda_setup/main.py:136: UserWarning: WARNING: The following directories listed in your path were found to be non-existent: {PosixPath('//matplotlib_inline.backend_inline'), PosixPath('module')}\n",
-      "  warn(msg)\n",
-      "[nltk_data] Downloading package punkt to /home/qblocks/nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "/Users/dawn/git/venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -771,7 +761,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
+    "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "\n",
     "sys.path.append('../../../')\n",
     "from saar.infer import Infer"
@@ -779,23 +769,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "3286b556-e499-4955-b105-499f80bdf794",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7849"
+       "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(news)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3c1b3075-7329-444f-8251-1361f439f9cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'I was bullied into sharing my personal news: Kusha on her divorce',\n",
+       "  'summary': 'Kusha Kapila, during India Today Conclave, shared she was \"bullied into sharing\" her divorce news. \"But I\\'m glad I shared it on my own terms. I didn\\'t want anyone else sharing information about my life...without consulting with me first,\" she said. Kusha added she allots around 30 minutes of the day to crying and feeling bad about her life\\'s turmoils.',\n",
+       "  'link': 'https://news.abplive.com/entertainment/celebrities/kusha-kapila-says-she-was-bullied-for-sharing-her-divorce-with-zorawar-ahluwalia-on-social-media-1634281/amp?utm_campaign=fullarticle&utm_medium=referral&utm_source=inshorts',\n",
+       "  'image_link': 'https://static.inshorts.com/inshorts/images/v1/variants/jpg/m/2023/10_oct/8_sun/img_1696766512744_381.jpg?',\n",
+       "  'source': 'inshorts',\n",
+       "  'full_text': \"New Delhi: Social media influencer and actress Kusha Kapila has spoken out about being harassed online after announcing her divorce from her husband Zorawar Ahluwalia. During a recent media event for the promotion of her new movie 'Thank You For Coming', she recalled being trolled every day. She spoke candidly about her experience with cyberbullying, which she said had worsened when she announced her split on Instagram.Kusha Kapila was recently questioned at the India Today Conclave on how she has handled the 'mud-slinging' that has resulted from the recent announcement about her personal life.She replied, I was honestly bullied into sharing my personal news. This is the first time Im sharing that. I was 100% bullied into sharing it. But Im glad I shared it on my own terms. I did not want anyone else sharing information about my life with the world, without consulting with me first. You have to put on blinders.Kusha Kapil went on to reveal how hard it is for her to cope with all the turmoil in her own life at the moment, saying, I actually allot a certain time of the day to crying and feeling bad about it. I give it exactly half an hour, and then I move on with my life. Theres so much to do.Kusha and Zorawar tied the knot in 2017. This year, on June 26, Kusha announced on Instagram that she and her husband Zorawar Ahluwalia are separated.Meanwhile, Kusha was most recently seen in Shilpa Shetty's Sukhee, and now her daring performance in Thank You For Coming has garnered her much attention. She co-starred with Bhumi Pednekar, Shehnaaz Gill, Dolly Singh, and Shibani Bedi in the film.ALSO READ: Thank You For Coming Review: Bhumi Pednekar, Shehnaaz Gill Film Is A Feminist Comedy Done Right\",\n",
+       "  'image_url': 'https://feeds.abplive.com/onecms/images/uploaded-images/2023/10/07/c2836b24d130c380cec1292fa9b5c3341696644159444775_original.jpg'}]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news"
    ]
   },
   {
@@ -969,9 +986,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
-   "name": "python3"
+   "name": "venv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -983,7 +1000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
